sandbox/output
ParserWithCustomizedDelimiter.java:6: error: cannot find symbol
        return Arrays.asList(string.substring(4).split("\\s*" + string.substring(2, 3) + "\\s*"));
               ^
  symbol:   variable Arrays
  location: class ParserWithCustomizedDelimiter
ParserWithDelimiterNewLineOrComma.java:1: error: ParserWithDelimiterNewLineOrComma is not abstract and does not override abstract method parse(String) in StringCalculatorParser
public class ParserWithDelimiterNewLineOrComma implements StringCalculatorParser {
       ^
StringCalculatorTest.java:8: error: method add in class StringCalculator cannot be applied to given types;
        assertEquals(0, StringCalculator.add(""));
                                        ^
  required: String,StringCalculatorParser
  found: String
  reason: actual and formal argument lists differ in length
3 errors
